# IDPS

./: CMakeLists.txt  README.md
dashboard/: index.html
rules/: default.json
src/: main.cpp
src/control/: ipc_broker.cpp  ipc_broker.hpp  logger.cpp  logger.hpp  policy_engine.cpp  policy_engine.hpp  rest_api.cpp  rest_api.hpp
src/ids/: alert_manager.cpp  alert_manager.hpp  packet_capture.cpp  packet_capture.hpp  packet_parser.cpp  packet_parser.hpp  port_scan_detector.cpp  port_scan_detector.hpp  signature_engine.cpp  signature_engine.hpp
src/sandbox/: behavior_monitor.cpp  behavior_monitor.hpp  sandbox_manager.cpp  sandbox_manager.hpp  seccomp_filter.cpp  seccomp_filter.hpp
tests/: test_alert_manager.cpp  test_policy_engine.cpp  test_seccomp.cpp  test_signature_engine.cpp
